# pattern-service

./: .gitignore  Makefile  README.md  dispatcher_dev.yml  pyproject.toml  run_mypy.sh  run_tests.sh  sonar-project.properties  tox.ini
.github/workflows/: docker.yml  sonar_checks.yml  tests.yml  units.yml  validate-pattern-specs.yml
core/: controller_client.py  models.py  serializers.py  services.py  task_runner.py  tasks.py  urls.py  views.py
core/migrations/: 0002_pattern_created_pattern_created_by_pattern_modified_and_more.py  0003_alter_automation_automation_id_and_more.py  0004_alter_pattern_collection_version_uri_and_more.py  0004_task_updated_at_alter_task_status.py  0005_alter_patterninstance_controller_labels.py
core/tasks/: common.py  demo.py  pattern.py
core/tests/: conftest.py  test_api_v1.py  test_controller_client.py  test_controller_helpers.py  test_pattern_tasks.py  test_serializers.py  test_services.py  test_tasks.py  test_utis.py  test_views.py
core/tests/integration/: test_pattern.py
core/utils/: http_helpers.py
core/utils/controller/: __init__.py  client.py  helpers.py
docs/: USER_GUIDE.md
pattern_service/: apps.py  authentication.py  models.py  resource_api.py  serializers.py  urls.py
pattern_service/migrations/: 0001_initial.py
pattern_service/settings/: __init__.py  aap.py  defaults.py  dispatcher.py  testing_defaults.py
requirements/: requirements-all.txt  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
specifications/: pattern_specification.json  pattern_specification.md
specifications/pattern-schema/: pattern-schema-1.0.0.json  pattern-schema-2.0.0.json  pattern-schema-3.0.0.json  pattern-schema-dev.json  pattern-schema-latest.json
specifications/pattern-specification/: pattern-specification-1.0.0.md  pattern-specification-2.0.0.md  pattern-specification-dev.md
src/pattern_service/: asgi.py  manage.py  urls.py  wsgi.py
src/pattern_service/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/pattern_service/core/management/commands/: __init__.py  worker.py
src/pattern_service/core/migrations/: 0001_initial.py  0002_pattern_created_pattern_created_by_pattern_modified_and_more.py  0003_resourcestate.py  0003_task.py
src/pattern_service/core/tasks/: worker.py
src/pattern_service/core/tests/: test_models.py  test_serializers.py  test_views.py
src/pattern_service/core/utils/: logging.py  tasks.py
src/pattern_service/settings/: __init__.py  core.py  default.py  defaults.py  load_db.py
tools/docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose-mac.yaml  docker-compose.yaml
tools/docker/postgres/initdb/: initdb.sh
tools/podman/: Containerfile.dev  Containerfile.hub  compose-test.yaml  compose.yaml  hub-api-config-test.json
